--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -42,13 +42,13 @@
             <br />
         }
         <hr class="my-4">
-        <span class="d-none d-md-inline">
+        <div class="d-none d-md-inline">
             <br />
             <p>SailScores is <a href="https://github.com/SailScores/SailScores#sailscores">open source</a> and volunteer driven.</p>
             <p>
                 <a asp-area="" asp-controller="ClubRequest" asp-action="Index">Host your club's scores</a> on this site for free.
             </p>
-        </span>
+        </div>
     </div>
     <div class="col-md-4 order-md-5">
         <h4>What's important in sailing club scoring software?</h4>
