--- a/SailScores.Web/Views/Templates/ClubCreated.cshtml
+++ b/SailScores.Web/Views/Templates/ClubCreated.cshtml
@@ -33,33 +33,30 @@
     <p>
         A club has been set up for @Model.ClubName at: <br />
         <a href="@clubUrl">@clubUrl</a>
-        <br />
     </p>
     <p>
-        If you haven't already, create an account at
-        <a href="@accountUrl">@accountUrl</a> using the email address you provided
-        ( @Model.ContactEmail ). That account can edit this club.
-        The club's pages are hidden from the front page of SailScores, but still
-        accessible to anyone through the URL above. You can edit the club settings
-        to make your pages visible on the front SailScores page and let search
-        engines find your races.
-    </p>
-    <p>
-        There are a few more steps to complete before you score your first race,
-        such as entering a list of competitors. You'll find
-        these steps listed on the club admin page:
+        Use the email address and password you provided during sign up to log
+        in and edit this club. ( @Model.ContactEmail ). Before you score your
+        first race, complete the steps listed on the club admin page:
         <a href="@clubUrl/admin/">@clubUrl/admin/</a>
     </p>
     <p>
-        We'll take a look at your club and, if you provided the info, help
-        set up the discard pattern and list of boat types you sail.
+        We'll make sure your discard pattern and boat types match what you
+        provided.
     </p>
     <p>
-        Please let us know about your experience: if there are areas of SailScores that are
-        causing you trouble or if you see an opportunity for improvement, please
-        let us know.  Feel free to email me at
+        The club's pages are accessible to anyone through the URL above. Edit
+        the club settings to make your pages visible on the front SailScores
+        page and let search engines find your races.
+    </p>
+    <p>
+        Please let us know about your experience: if there are areas of
+        SailScores that are causing trouble or if you see an opportunity
+        for improvement, please let us know.  Feel free to email me at
         <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>
         or add to the public list of issues, bugs and feature requests at
-        <a href="https://github.com/SailScores/SailScores/issues">https://github.com/SailScores/SailScores/issues</a> .</p>
+        <a href="https://github.com/SailScores/SailScores/issues"
+            >https://github.com/SailScores/SailScores/issues</a> .
+    </p>
 </body>
 </html>
