--- a/SailScores.Web/Views/Shared/_ClubSelectorView.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubSelectorView.cshtml
@@ -4,7 +4,7 @@
         onchange="window.location.href = '/' + this.value;"
         autocomplete="off"
         asp-items="@(new SelectList(Model.Clubs, "Initials", "Name"))">
-    <option>  ----Select a club----  </option>
+    <option value="">  ----Select a club----  </option>
     </select>
 <script>
     document.getElementById("clubSelect").selectedIndex = 0;
