Privacy Policy updates

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -31,36 +31,32 @@
         <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
     </p>
     <p>
-        SailScores doesn't share any tracking or cookies with third-parties. Your
-        data is not being sold by SailScores. See our thorough
-        <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
-    </p>
-    <p>
         The expense to host this site is less than $20 a month.
         Development time is a more significant contribution but is happily donated:
         score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
     </p>
     <p>
-        Some day, some features may require more resources or payment to other services. When that
-        becomes an issue we'll find a way to only charge the users of the "Premium" features.
+        Some upcoming features will likely require more resources and payments to other services. When those
+        become available, we may need to pass some of those costs on to users of the "Premium" features.
     </p>
     <p>
-        We are committed to providing a free option regardless. Our clubs
-        haven't had large budgets and would have benefited from SailScores. We'd
-        like to share.
+        We are committed to always providing a free option. Our clubs haven't had
+        large budgets and would have benefited from SailScores. We'd like to share.
+    </p>
+    <p>
+        SailScores doesn't share any tracking or cookies with third-parties. Your
+        data is not being sold by SailScores. See our thorough
+        <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
     </p>
     <br />
     <h3>Future</h3>
     We're working on new features, including:
     <ul>
+        <li>Coming soon: speech recognition for faster race result entry.</li>
         <li>Integration with social media, such as automatic posting of results to Twitter.</li>
         <li>Additional analysis for competitors in different conditions.</li>
         <li>More import and export options to integrate with existing scoring software.</li>
         <li>Deeper trend reporting for clubs: What's the average wind for your club's races?</li>
-        <li>
-            More options for result entry: let's keep making result entry simpler and faster.
-            We've got even more ideas for this...
-        </li>
     </ul>
     <p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
     <br />
