--- a/SailScores.Web/Views/Home/Privacy.cshtml
+++ b/SailScores.Web/Views/Home/Privacy.cshtml
@@ -26,9 +26,10 @@
         Some users are granted the ability to edit public content on SailScores. We refer to
         these users as "Scorekeepers" below.</p>
     <p>
-        There are third-party services, such as github.com, which support
-        SailScores. This Privacy Policy does not apply to accounts and activites on those, or any other,
-        third-party services.</p>
+        There are third-party services, such as github.com and Microsoft, which support
+        SailScores. This Privacy Policy does not apply to accounts and activities conducted
+        on those, or any other, third-party services when they are not performed through
+        SailScores. It does apply to SailScores' use of third-party services.</p>
     <p>
         Below we explain how we collect, use, and share information about you, along with the
         choices that you have with respect to that information.
@@ -55,7 +56,8 @@
             <strong>Basic account information: </strong>We ask for basic information from you
             in order to set up your account. For example, we require individuals who sign up for
             a SailScores.com account to provide a name, email address, and password, — and that’s
-            it.
+            it. A preferred language for speech recognition may be provided, but
+            changing from the default is optional.
         </li>
         <li>
             <strong>Public profile information:</strong> If you have an account with us, we
@@ -80,6 +82,11 @@
             information when you respond to surveys or sign up for a newsletter. When you
             communicate with us via form, email, github.com comment, or otherwise, we may store
             a copy of our communications.
+        </li>
+        <li>
+            <strong>Speech: </strong> Scorekeepers may opt to use speech recognition for data
+            entry. When this feature is used, audio data from the Scorekeepers' device is sent
+            to a third party for interpretation into textual data.
         </li>
     </ul>
 </section>
@@ -177,7 +184,7 @@
     <p>(3) The use is necessary in order to protect your vital interests or those of another person; or</p>
     <p>(4) We have a legitimate interest in using your information — for example, to provide and
         update our Services; to improve our Services so that we can offer you an even better
-        user experience; to safeguard our Services; to communicate with you; to measure, gauge,
+        user experience; to safeguard our Services; to communicate with you; to measure, gage,
         and improve the effectiveness of our Services; to monitor and prevent any problems with
         our Services; or</p>
     <p>(5) You have given us your consent — for example, information is submitted after the "Save" or
@@ -196,12 +203,23 @@
     <ul>
         <li>
             <strong>Public use:</strong> some of the information we collect, such as your name and
-            sailing results, are posted on webpages accessble by the general public. This is essential
+            sailing results, are posted on webpages accessible by the general public. This is essential
             to the functioning of the Services.
         </li>
         <li>
-            <strong>Third-party vendors:</strong> We do not share private user information with third
-            parties except as called out below.
+            <strong>Third-party vendors:</strong> 
+            We may share information about you with third-party vendors who need the information
+            in order to provide their services to us. Currently, this includes a single vendor, Microsoft,
+            to provide Speech Recognition services. Information regarding their privacy policy for this service
+            can be found at 
+            <a href="https://azure.microsoft.com/en-us/support/legal/cognitive-services-compliance-and-privacy/"
+                target=""
+                >Azure Cognitive Services</a>.
+            In the future we may use other vendors to help us provide our Services to
+            you, payment providers that process your credit and debit card information, and postal
+            and email delivery services that help us stay in touch with you. We require vendors
+            commit to customer privacy, including obligations that disallow the resale of our users'
+            data. 
         </li>
         <li>
             <strong>Legal and regulatory requirements:</strong> We may disclose information about
@@ -286,13 +304,14 @@
     <ul>
         <li>
             <strong>Limit the information that you provide:</strong> If you have an account with us,
-            you can choose not to provide the optional club and score information.
+            you can choose not to provide the optional club and score information. Use of speech
+            recognition is optional.
         </li>
         <li>
-            <strong>Limit access to information on your mobile device:</strong> Your mobile device
-            operating system should provide you with the option to discontinue our ability to collect
-            stored information or location information via our mobile apps. If you choose to limit this,
-            you may not be able to use certain features, like geotagging for photographs.
+            <strong>Limit access to information on your computing device:</strong> Your device
+            operating system should provide you with the option to discontinue our ability to access
+            the microphone capability of the device. If you choose to limit this, you will not
+            be able to use certain features, specifically speech recognition for data entry.
         </li>
         <li>
             <strong>Opt out of marketing communications:</strong> You may opt out of receiving
@@ -450,6 +469,8 @@
 <section id="change-log">
     <h3>Change log</h3>
     <ul>
+        <li><em>April 25, 2021: </em>Added specific mention of speech recognition services provided by
+        Microsoft. To process speech, data will be processed by Microsoft.</li>
         <li><em>December 23, 2020: </em>Removed reference to blocking cookies with browser. Most users
         will not receive cookies from SailScores. We use minimal cookies to track logged in users.</li>
         <li><em>December 17, 2020: </em>Initial version of this policy shared.</li>
