--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -57,7 +57,14 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label asp-for="FleetId" class="control-label">Fleet</label>
-                <small>Controls the list of available competitors</small>
+                <a class="text-primary"
+                    data-container="body"
+                    data-toggle="popover"
+                    data-placement="top"
+                    data-trigger="focus hover"
+                    data-content="Controls the list of available competitors.">
+                    <span class="far fa-question-circle"></span>
+                </a>
                 <select id="fleetId" asp-for="FleetId" class="form-control">
                     @if (Model.FleetOptions.Count > 1)
                     {
@@ -357,6 +364,12 @@
 }
 
 @section Scripts {
+    <script>
+        $(function () {
+            $('[data-toggle="popover"]').popover()
+        })
+
+    </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/vendor/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="~/vendor/devbridge-autocomplete/jquery.autocomplete.js"></script>
