Keep local copy of Speechrecog sdk

--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -381,6 +381,6 @@
     <script src="~/js/raceEditor.min.js" asp-append-version="true"></script>
     @if (Model.UseAdvancedFeatures)
     {
-        <script src="https://aka.ms/csspeech/jsbrowserpackageraw"></script>
+        <script src="~/js/microsoft.cognitiveservices.speech.sdk.bundle-min.js"></script>
     }
 }
