--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -343,7 +343,7 @@
     <script src="~/js/raceEditor.min.js" asp-append-version="true"></script>
     @if (Model.UseAdvancedFeatures)
     {
-        <script src="https://aka.ms/csspeech/jsbrowserpackageraw"></script>
+        <script src="~/js/microsoft.cognitiveservices.speech.sdk.bundle-min.js"></script>
     }
 
 }
