noindex instead of robots.txt

--- a/SailScores.Web/Views/Account/AccessDenied.cshtml
+++ b/SailScores.Web/Views/Account/AccessDenied.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Access denied";
 }
-
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 <header>
     <h2 class="text-danger">@ViewData["Title"]</h2>
     <p class="text-danger">You do not have access to this resource.</p>
