--- a/SailScores.Web/Views/Account/ConfirmEmail.cshtml
+++ b/SailScores.Web/Views/Account/ConfirmEmail.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Confirm email";
 }
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 
 <h2>@ViewData["Title"]</h2>
 <div>
