--- a/SailScores.Web/Views/Account/ExternalLogin.cshtml
+++ b/SailScores.Web/Views/Account/ExternalLogin.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "Register";
 }
-
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 <h2>@ViewData["Title"]</h2>
 <h4>Associate your @ViewData["LoginProvider"] account.</h4>
 <hr />
