--- a/SailScores.Web/Views/Account/Lockout.cshtml
+++ b/SailScores.Web/Views/Account/Lockout.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Locked out";
 }
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 
 <header>
     <h2 class="text-danger">@ViewData["Title"]</h2>
