--- a/SailScores.Web/Views/Account/LoginWithRecoveryCode.cshtml
+++ b/SailScores.Web/Views/Account/LoginWithRecoveryCode.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewData["Title"] = "Recovery code verification";
 }
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 
 <h2>@ViewData["Title"]</h2>
 <hr />
