--- a/SailScores.Web/Views/Account/ResetPassword.cshtml
+++ b/SailScores.Web/Views/Account/ResetPassword.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Reset password";
 }
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 
 <h2>@ViewData["Title"]</h2>
 <h4>Reset your password.</h4>
