--- a/SailScores.Web/Views/Account/LoginWith2fa.cshtml
+++ b/SailScores.Web/Views/Account/LoginWith2fa.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Two-factor authentication";
 }
+@section AdditionalMeta
+{
+    <meta name="robots" content="noindex,nofollow" />
+}
 
 <h2>@ViewData["Title"]</h2>
 <hr />
