--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -80,7 +80,7 @@
                             </div>
                             <div class="form-check">
                                 <input asp-for="@Model.IsActive" type="checkbox" class="form-check-input" />
-                                <label asp-for="IsActive" class="control-label"></label>
+                                <label asp-for="IsActive" class="form-check-label"></label>
                                 <span asp-validation-for="IsActive" class="text-danger"></span>
                             </div>
                             <div class="form-group">
