Get speech auth earlier

--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -243,9 +243,9 @@
                           style="font-italic">
                         Error loading Speech Recognition.
                     </span>
-                    <span id="phraseDiv"
-                          class="font-italic">
-                    </span>
+                    <p id="phraseDiv"
+                          class="lead">
+                    </p>
                 }
             </div>
             <div class="d-none d-lg-inline-block col-lg-2"></div>
