Trend only if races to trend against
Closes SailScores/SailScores#225

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
             <li>Competitor statistics across multiple series.</li>
             <li>Count a single race in multiple series.</li>
             <li>Automatically collect and share weather information.</li>
-            <li>Phone friendly.</li>
+            <li>Phone friendly, for scorekeepers as well as racers.</li>
         </ul>
     </div>
 </div>
