Better competitor layout for phones

--- a/SailScores.Web/Views/Competitor/Delete.cshtml
+++ b/SailScores.Web/Views/Competitor/Delete.cshtml
@@ -46,9 +46,8 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-controller="Admin"
+        <a asp-controller="Competitors"
            asp-action="Index"
-           asp-fragment="competitors"
            class="btn btn-outline-primary">Cancel</a>
     </form>
 </div>
